WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74589
REGRESSION (
r101413
): Correction panel overlaps misspelled text
https://bugs.webkit.org/show_bug.cgi?id=74589
Summary
REGRESSION (r101413): Correction panel overlaps misspelled text
mitz
Reported
2011-12-14 22:53:08 PST
To reproduce, in Mail, create a new message and type a few words, ending with a misspelled word. The correction panel will partially overlap the typed word, instead of appearing below it.
Attachments
Patch
(1.51 KB, patch)
2012-01-17 14:41 PST
,
Enrica Casucci
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-12-14 22:53:34 PST
<
rdar://problem/10585115
>
Enrica Casucci
Comment 2
2012-01-17 14:41:59 PST
Created
attachment 122815
[details]
Patch
Enrica Casucci
Comment 3
2012-01-17 15:35:14 PST
http://trac.webkit.org/changeset/105201
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug