REGRESSION (r101413): Correction panel overlaps misspelled text. https://bugs.webkit.org/show_bug.cgi?id=74589 <rdar://problem/10585115>

When converting the rectangle from the root view, we need
to take into account the height of the rectangle.
        
Reviewed by Anders Carlsson.

* WebView/WebView.mm:
(-[WebView _convertRectFromRootView:]):



git-svn-id: svn://svn.chromium.org/blink/trunk@105201 bbb929c8-8fbe-4397-9dbb-9b2b20218538